# BackEnd/internal/platform/server/routes/accountRoutes.go
@@ -10,4 +10,5 @@ func AccountRotes(s *gin.Engine, acountService *account.AccountService) {
 	s.POST("/account", handler.CreateAccount(acountService))
 	s.GET("/account", handler.FindAllAccount(acountService))
 	s.DELETE("/account/:id", handler.DeleteAccount(acountService))
+	s.PUT("/account/:id", handler.UpdateAccount(acountService))
 }
